지표 계산시 마지막 캔들 포함 전